kubernetes/apps/default/immich/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - photos.iacob.co.uk
  rules:
    - backendRefs:
        - name: immich-server
          port: 3001
